// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Message {
  id           String   @id @default(cuid())
  wa_user_id   String   // 628xxx (WhatsApp user phone number)
  message_id   String   @unique // Unique message ID from WhatsApp provider
  message_text String   @db.Text
  direction    String   // "IN" | "OUT"
  source       String   // "WA_WEBHOOK" | "AI" | "SYSTEM"
  timestamp    DateTime @default(now())
  createdAt    DateTime @default(now())
  
  @@index([wa_user_id, timestamp])
  @@index([direction])
  @@index([message_id])
  @@map("messages")
}

model SendLog {
  id           String   @id @default(cuid())
  wa_user_id   String
  message_text String   @db.Text
  status       String   // "sent" | "failed"
  error_msg    String?  @db.Text
  timestamp    DateTime @default(now())
  
  @@index([wa_user_id])
  @@index([status])
  @@index([timestamp])
  @@map("send_logs")
}

model wa_settings {
  id                 String   @id @default("default")
  auto_read_messages Boolean  @default(false)
  typing_indicator   Boolean  @default(false)
  created_at         DateTime @default(now())
  updated_at         DateTime @default(now()) @updatedAt
  
  @@map("wa_settings")
}

// Channel accounts per village
model channel_accounts {
  id             String   @id @default(cuid())
  village_id     String   @unique
  wa_number      String
  wa_token       String
  webhook_url    String
  enabled_wa     Boolean  @default(true)
  enabled_webchat Boolean @default(true)
  created_at     DateTime @default(now())
  updated_at     DateTime @updatedAt

  @@index([wa_number])
  @@map("channel_accounts")
}

// Takeover sessions - when admin takes over conversation from AI
model TakeoverSession {
  id           String    @id @default(cuid())
  wa_user_id   String    // User being taken over
  admin_id     String    // Admin user ID who took over
  admin_name   String?   // Admin display name
  started_at   DateTime  @default(now())
  ended_at     DateTime? // null = still active
  reason       String?   // Optional reason for takeover
  
  @@index([wa_user_id])
  @@index([admin_id])
  @@index([started_at])
  @@index([wa_user_id, ended_at]) // For finding active takeover
  @@map("takeover_sessions")
}

// Conversation summary for live chat list
model Conversation {
  id                   String   @id @default(cuid())
  wa_user_id           String   @unique
  user_name            String?  // WhatsApp push name
  last_message         String?  @db.Text
  last_message_at      DateTime @default(now())
  unread_count         Int      @default(0)
  is_takeover          Boolean  @default(false)
  ai_status            String?  // null | "processing" | "error" | "queued"
  ai_error_message     String?  @db.Text // Error message if AI failed
  pending_message_id   String?  // Message ID that needs AI retry
  created_at           DateTime @default(now())
  updated_at           DateTime @default(now()) @updatedAt
  
  @@index([is_takeover])
  @@index([last_message_at])
  @@index([ai_status])
  @@map("conversations")
}

// Pending messages queue - for batching and retry
model PendingMessage {
  id           String   @id @default(cuid())
  wa_user_id   String   // User phone number
  message_id   String   @unique // WhatsApp message ID
  message_text String   @db.Text
  status       String   @default("pending") // pending | processing | completed | failed
  retry_count  Int      @default(0)
  error_msg    String?  @db.Text
  created_at   DateTime @default(now())
  updated_at   DateTime @default(now()) @updatedAt
  
  @@index([wa_user_id, status])
  @@index([status, created_at])
  @@map("pending_messages")
}
